kubernetes/apps/app-cluster/media/hometube/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hometube-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - hometube.krapulax.home
  rules:
    - backendRefs:
        - name: hometube
          namespace: media
          port: 8501
